--- a/index.html
+++ b/index.html
@@ -339,11 +339,11 @@
     <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white-50">Copyright &copy; <a href="#">emeralds Holidays</a>. All Rights Reserved.</a>
+                <p class="m-0 text-white-50">Copyright &copy; <a href="#">Emeralds Holidays</a>. All Rights Reserved.</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
-                <p class="m-0 text-white-50">Designed by <a href="https://htmlcodex.com">Diptangshu Dolui</a>
+                <p class="m-0 text-white-50">Designed by <a href="https://www.linkedin.com/in/diptangshu-dolui-27042886/">Diptangshu Dolui</a>
                 </p>
             </div>
         </div>
